widget_home_search 42px height to prevents hover flickering

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ div.jp-seeking-bg
 	position: absolute;
 	top: 44px;
 	left: 8px;
+	height: 42px;
 	transition: width 0.4s;
 }
 
